@@ -51,6 +51,7 @@ public interface CMMiscUtils extends CMLibrary
     public boolean reachableItem(MOB mob, Environmental E);
     public void extinguish(MOB source, Environmental target, boolean mundane);
     public boolean armorCheck(MOB mob, int allowedArmorLevel);
+	public boolean armorCheck(MOB mob, Item I, int allowedArmorLevel);
     public void recursiveDropMOB(MOB mob, Room room, Item thisContainer, boolean bodyFlag);
     
     public Trap makeADeprecatedTrap(Environmental unlockThis);
