@@ -38912,7 +38912,9 @@ read with the QVAR function.</p>
       
       
       <p>MPQSET also supports a special Scriptable-only variable called QUESTOBJ. Set this variable to an object created with mpmload
-              fromfile or mpoload fromfile to ensure that the quest will clean up the item or mob when the quest ends.</p>
+              fromfile or mpoload fromfile to ensure that the quest will clean up the item or mob when the quest ends.  You can also 
+              set a Scriptable-only variable called STATISTICS to either ACCEPTED, SUCCESS, or FAILED to help CoffeeMud keep tabs
+              on your quests.</p>
 
 
 
