@@ -232,6 +232,17 @@ DAMAGE_WORDS=\
     BURSTING, annoy(s), scratch(es),graze(s),wound(s),cut(s),damage(s),decimate(s),murder(s),\
         massacre(s), MASSACRE(S), destroy(s), DESTROY(S), obliterate(s), OBLITERATE(S), **OBLITERATE(S)**, --==::OBLITERATE(S)::==--
 
+
+# A chart of messages shown when a player wears armor that doesn't agree with his/her class
+ARMOR_MISFITS=\
+<T-NAME> feels a bit awkward.,\
+<T-NAME> doesn't feel right.,\
+<T-NAME> don't fit quite right.,\
+<T-NAME> makes your skin feel strange.,\
+<T-NAME> makes your skin feel a little itchy.,\
+<T-NAME> feels a little strange.,\
+<T-NAME> seems a bit awkward.
+
 # HEALTH_CHART is the default health description chart, often modified by race. 
 HEALTH_CHART=\
     ^r<MOB>^r is hovering on deaths door!^N,\
